fix warnings and errors found by w3c validator

--- a/products.html
+++ b/products.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="es-MX">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Esther Lecina" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Esther Lecina">
     <meta
       name="description"
       content="La cooperativa CaLaMariona, ubicada en Cerdanyola del Vallés, ofrece soporte a todos sus socios además de productos ecológicos y de proximidad a todos sus compradores."
-    />
+   >
     <title>Els productes de CaLaMariona</title>
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./styles/style.css">
     <script src="./scripts/script.js" defer></script>
     <!-- Fonts google -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Titillium+Web:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
       rel="stylesheet"
-    />
+   >
     <!-- Fonts awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
+   >
   </head>
   <body>
     <header>
@@ -47,7 +47,7 @@
               class="logo"
               src="./images/logo.svg"
               alt="logotipo CaLaMariona"
-            />
+           >
           </a>
         </div>
         <div class="hamburger">
@@ -111,7 +111,7 @@
       <section class="products-container">
         <aside class="products-nav">
           <div class="search">
-            <input type="search" />
+            <input type="search">
           </div>
           <div class="category">
             <h6>Categoría</h6>
@@ -130,7 +130,7 @@
             <h6>Filtros</h6>
             <div class="season">
               <label for="temporada">Temporada</label>
-              <select name="temporada" id="">
+              <select name="temporada" id="temporada">
                 <option value="todas" selected>Todas</option>
                 <option value="invierno">Invierno</option>
                 <option value="primavera">Primavera</option>
@@ -140,7 +140,7 @@
             </div>
             <div class="season">
               <label for="productor">Productor</label>
-              <select name="productor" id="">
+              <select name="productor" id="productor">
                 <option value="todos" selected>Todos</option>
                 <option value="ramon">Ramón Bilbao</option>
                 <option value="mariaAntonia">Maria Antònia Romeu</option>
@@ -157,7 +157,7 @@
             <div class="product-info">
               <a href="#">Ver ficha</a>
               <h3>Escarola Baby tierna</h3>
-              <img src="./images/products/acelgas_1000px.jpg" alt="Imagen de las acelgas de la temporada"/>
+              <img src="./images/products/acelgas_1000px.jpg" alt="Imagen de las acelgas de la temporada">
             </div>
             <div class="product-action">
               <div class="product-buy" role="button">
@@ -170,7 +170,7 @@
             <div class="product-info">
               <a href="#">Ver ficha</a>
               <h3>Pimientos temporada</h3>
-              <img src="./images/products/pimientos_1000px.jpg" alt="Imagen de los pimientos de temporada"/>
+              <img src="./images/products/pimientos_1000px.jpg" alt="Imagen de los pimientos de temporada">
             </div>
             <div class="product-action">
               <div class="product-buy" role="button">
@@ -183,7 +183,7 @@
             <div class="product-info">
               <a href="#">Ver ficha</a>
               <h3>Judías verdes</h3>
-              <img src="./images/products/judia_1000px.jpg" alt="Imagen de las judías de temporada"/>
+              <img src="./images/products/judia_1000px.jpg" alt="Imagen de las judías de temporada">
             </div>
             <div class="product-action">
               <div class="product-buy" role="button">
@@ -196,7 +196,7 @@
             <div class="product-info">
               <a href="#">Ver ficha</a>
               <h3>Ajos de llançà</h3>
-              <img src="./images/products/ajos_1000px.jpg" alt="Imagen de ajos de llançà"/>
+              <img src="./images/products/ajos_1000px.jpg" alt="Imagen de ajos de llançà">
             </div>
             <div class="product-action">
               <div class="product-buy" role="button">
@@ -209,7 +209,7 @@
             <div class="product-info">
               <a href="#">Ver ficha</a>
               <h3>Berenjenas francesas</h3>
-              <img src="./images/products/berenjena_1000px.jpg" alt="Imagen de la cosecha de berengenas"/>
+              <img src="./images/products/berenjena_1000px.jpg" alt="Imagen de la cosecha de berengenas">
             </div>
             <div class="product-action">
               <div class="product-buy" role="button">
@@ -222,7 +222,7 @@
             <div class="product-info">
               <a href="#">Ver ficha</a>
               <h3>Calabacines de la huerta</h3>
-              <img src="./images/products/calabacines_1000px.jpg" alt="Imagen de grupo de calabacines"/>
+              <img src="./images/products/calabacines_1000px.jpg" alt="Imagen de grupo de calabacines">
             </div>
             <div class="product-action">
               <div class="product-buy" role="button">
@@ -235,7 +235,7 @@
             <div class="product-info">
               <a href="#">Ver ficha</a>
               <h3>Cebollas de Figueres</h3>
-              <img src="./images/products/cebollas_1000px.jpg" alt="Imagen de cebollas de Figueres"/>
+              <img src="./images/products/cebollas_1000px.jpg" alt="Imagen de cebollas de Figueres">
             </div>
             <div class="product-action">
               <div class="product-buy" role="button">
@@ -248,7 +248,7 @@
             <div class="product-info">
               <a href="#">Ver ficha</a>
               <h3>Tomates de rama</h3>
-              <img src="./images/products/tomates.jpg" alt="Imagen de la cosecha de tomates de la temporada"/>
+              <img src="./images/products/tomates.jpg" alt="Imagen de la cosecha de tomates de la temporada">
             </div>
             <div class="product-action">
               <div class="product-buy" role="button">
@@ -261,7 +261,7 @@
             <div class="product-info">
               <a href="#">Ver ficha</a>
               <h3>Espárragos verdes</h3>
-              <img src="./images/products/esparragos_1000px.jpg" alt="Imagen de un par de manojos de espárragos"/>
+              <img src="./images/products/esparragos_1000px.jpg" alt="Imagen de un par de manojos de espárragos">
             </div>
             <div class="product-action">
               <div class="product-buy" role="button">
@@ -274,7 +274,7 @@
             <div class="product-info">
               <a href="#">Ver ficha</a>
               <h3>Lechuga Iceberg</h3>
-              <img src="./images/products/col_1000px.jpg" alt="Imagen de la lechuga iceberg de esta temporada"/>
+              <img src="./images/products/col_1000px.jpg" alt="Imagen de la lechuga iceberg de esta temporada">
             </div>
             <div class="product-action">
               <div class="product-buy" role="button">
@@ -287,7 +287,7 @@
             <div class="product-info">
               <a href="#">Ver ficha</a>
               <h3>Patatas blancas</h3>
-              <img src="./images/products/patatas_1000px.jpg" alt="Imagen de la cosecha de patatas de Ramón Bilbao"/>
+              <img src="./images/products/patatas_1000px.jpg" alt="Imagen de la cosecha de patatas de Ramón Bilbao">
             </div>
             <div class="product-action">
               <div class="product-buy" role="button">
@@ -305,8 +305,8 @@
           <h6>Información de contacto</h6>
           <address>
             <p>
-              Carrer de la font, 12<br />
-              Cerdanyola del Vallés<br />
+              Carrer de la font, 12<br>
+              Cerdanyola del Vallés<br>
               08080 Barcelona
             </p>
             <ul>
@@ -333,7 +333,7 @@
           </ul>
         </div>
       </div>
-      <img class="logo" src="./images/logo.svg" alt="logotipo CaLaMariona" />
+      <img class="logo" src="./images/logo.svg" alt="logotipo CaLaMariona">
       <div>
         <div class="footer_redes">
           <a href="#" title="Enlace a la red Twitter" target="_blank"
