--- a/signup.html
+++ b/signup.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="es-MX">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Esther Lecina" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Esther Lecina">
     <meta
       name="description"
       content="La cooperativa CaLaMariona, ubicada en Cerdanyola del Vallés, ofrece soporte a todos sus socios además de productos ecológicos y de proximidad a todos sus compradores."
-    />
+   >
     <title>Els productes de CaLaMariona</title>
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./styles/style.css">
     <script src="./scripts/script.js" defer></script>
     <!-- Fonts google -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Titillium+Web:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
       rel="stylesheet"
-    />
+   >
     <!-- Fonts awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
+   >
   </head>
   <body>
     <header>
@@ -47,7 +47,7 @@
               class="logo"
               src="./images/logo.svg"
               alt="logotipo CaLaMariona"
-            />
+           >
           </a>
         </div>
         <div class="hamburger">
@@ -127,7 +127,7 @@
               name="nombre"
               placeholder="Johanna"
               required
-            />
+           >
 
             <label for="apellidos">Apellidos:</label>
             <input
@@ -136,7 +136,7 @@
               name="apellidos"
               placeholder="Doe Doe"
               required
-            />
+           >
 
             <label for="telefono">Teléfono:</label>
             <input
@@ -145,7 +145,7 @@
               name="telefono"
               placeholder="+34 690 690 690"
               required
-            />
+           >
 
             <label for="email">Email:</label>
             <input
@@ -154,7 +154,7 @@
               name="email"
               placeholder="ejemplo@dominio.com"
               required
-            />
+           >
 
             <label for="dni">DNI:</label>
             <input
@@ -163,7 +163,7 @@
               name="dni"
               placeholder="999999999w"
               required
-            />
+           >
 
             <label for="fecha_nacimiento">Fecha de nacimiento:</label>
             <input
@@ -171,7 +171,7 @@
               id="fecha_nacimiento"
               name="fecha_nacimiento"
               required
-            />
+           >
 
             <fieldset>
               <legend>Horario de disponibilidad</legend>
@@ -207,8 +207,8 @@
           <h6>Información de contacto</h6>
           <address>
             <p>
-              Carrer de la font, 12<br />
-              Cerdanyola del Vallés<br />
+              Carrer de la font, 12<br>
+              Cerdanyola del Vallés<br>
               08080 Barcelona
             </p>
             <ul>
@@ -235,7 +235,7 @@
           </ul>
         </div>
       </div>
-      <img class="logo" src="./images/logo.svg" alt="logotipo CaLaMariona" />
+      <img class="logo" src="./images/logo.svg" alt="logotipo CaLaMariona">
       <div>
         <div class="footer_redes">
           <a href="#" title="Enlace a la red Twitter" target="_blank"
