--- a/socis.html
+++ b/socis.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="es-MX">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Esther Lecina" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Esther Lecina">
     <meta
       name="description"
       content="La cooperativa CaLaMariona, ubicada en Cerdanyola del Vallés, ofrece soporte a todos sus socios además de productos ecológicos y de proximidad a todos sus compradores."
-    />
+   >
     <title>Els socis de CaLaMariona</title>
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./styles/style.css">
     <script src="./scripts/script.js" defer></script>
     <!-- Fonts google -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Titillium+Web:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
       rel="stylesheet"
-    />
+   >
     <!-- Fonts awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
+   >
   </head>
   <body>
     <header>
@@ -47,7 +47,7 @@
               class="logo"
               src="./images/logo.svg"
               alt="logotipo CaLaMariona"
-            />
+           >
           </a>
         </div>
         <div class="hamburger">
@@ -119,7 +119,7 @@
             <img
               src="./images/card_01.jpg"
               alt="Maria Antònia en su herbolistería"
-            />
+           >
             <div class="card-info">
               <h4>Maria Antònia Romeu Vilaspasa</h4>
               <p>"Gracias a CaLaMariona ahora tengo acceso a los mejores...</p>
@@ -130,7 +130,7 @@
             <img
               src="./images/card_02.jpg"
               alt="Maria Antònia en su herbolistería"
-            />
+           >
             <div class="card-info">
               <h4>Pere Pons Fontdevila</h4>
               <p>"Gracias a CaLaMariona ahora tengo acceso a los mejores...</p>
@@ -141,7 +141,7 @@
             <img
               src="./images/card_03.jpg"
               alt="Maria Antònia en su herbolistería"
-            />
+           >
             <div class="card-info">
               <h4>Oliver Fernández Rodríguez</h4>
               <p>"Gracias a CaLaMariona ahora tengo acceso a los mejores...</p>
@@ -152,7 +152,7 @@
             <img
               src="./images/card_04.jpg"
               alt="Enric colocando el género en su tienda"
-            />
+           >
             <div class="card-info">
               <h4>Enric Bel Escadolles</h4>
               <p>"Todos los socios de CaLaMariona no podríamos estar más...</p>
@@ -163,7 +163,7 @@
             <img
               src="./images/card_05.jpg"
               alt="Ramón sosteniendo feliz su cosecha"
-            />
+           >
             <div class="card-info">
               <h4>Ramón Bilbao Comí</h4>
               <p>"CaLaMariona me ayudó a conseguir mi sueño, con ayuda...</p>
@@ -174,7 +174,7 @@
             <img
               src="./images/card_06.jpg"
               alt="Joana en el mostrador de su fleca"
-            />
+           >
             <div class="card-info">
               <h4>Joana Mercedes Uller</h4>
               <p>"Todo es más fácil desde que CaLaMariona...</p>
@@ -190,8 +190,8 @@
           <h6>Información de contacto</h6>
           <address>
             <p>
-              Carrer de la font, 12<br />
-              Cerdanyola del Vallés<br />
+              Carrer de la font, 12<br>
+              Cerdanyola del Vallés<br>
               08080 Barcelona
             </p>
             <ul>
@@ -218,7 +218,7 @@
           </ul>
         </div>
       </div>
-      <img class="logo" src="./images/logo.svg" alt="logotipo CaLaMariona" />
+      <img class="logo" src="./images/logo.svg" alt="logotipo CaLaMariona">
       <div>
         <div class="footer_redes">
           <a href="#" title="Enlace a la red Twitter" target="_blank"
