Put color green on social networks and add submenu to navbar

--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@
       name="description"
       content="La cooperativa CaLaMariona, ubicada en Cerdanyola del Vallés, ofrece soporte a todos sus socios además de productos ecológicos y de proximidad a todos sus compradores."
    >
-    <title>Els productes de CaLaMariona</title>
+    <title>Formulario de inscripción de socios de CaLaMariona</title>
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./styles/style.css">
     <script src="./scripts/script.js" defer></script>
@@ -47,7 +47,7 @@
               class="logo"
               src="./images/logo.svg"
               alt="logotipo CaLaMariona"
-           >
+            />
           </a>
         </div>
         <div class="hamburger">
@@ -58,13 +58,23 @@
       </div>
       <nav id="menu" class="header-menu-2">
         <ul>
-          <li>
-            <a
-              href="./index.html"
-              title="Enlace a la página principal de la cooperativa"
-              >Cooperativa</a
-            >
-            <i class="fa-solid fa-chevron-up"></i>
+          <li class="dropdown">
+            <span
+              ><a
+                href="./index.html"
+                title="Enlace a la página principal de la cooperativa"
+                >Cooperativa</a
+              >
+              <i class="fa-solid fa-chevron-up"></i
+            ></span>
+            <ul class="submenu">
+              <li><a href="#">Quienes somos</a></li>
+              <li><a href="#">Qué hacemos</a></li>
+              <li><a href="#">Cómo funciona</a></li>
+              <li><a href="#">Dónde estamos</a></li>
+              <li><a href="#">Beneficios</a></li>
+              <li><a href="./signup.html">Inscríbete</a></li>
+            </ul>
           </li>
           <li>
             <a
@@ -90,13 +100,13 @@
       </nav>
       <div class="redes">
         <a href="#" title="Enlace a la red Twitter" target="_blank"
-          ><i class="fa-brands fa-twitter"></i
+          ><i class="fa-brands fa-twitter green"></i
         ></a>
         <a href="#" title="Enlace a la red Facebook" target="_blank"
-          ><i class="fa-brands fa-facebook"></i
+          ><i class="fa-brands fa-facebook green"></i
         ></a>
         <a href="#" title="Enlace a la red Instagram" target="_blank"
-          ><i class="fa-brands fa-instagram"></i
+          ><i class="fa-brands fa-instagram green"></i
         ></a>
       </div>
     </header>
