--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="es-MX">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Esther Lecina">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Esther Lecina" />
     <meta
       name="description"
       content="La cooperativa CaLaMariona, ubicada en Cerdanyola del Vallés, ofrece soporte a todos sus socios además de productos ecológicos y de proximidad a todos sus compradores."
-   >
-    <title>CaLaMariona</title>
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./styles/style.css">
+    />
+    <title>Página principal de la cooperativa CaLaMariona</title>
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <script src="./scripts/script.js" defer></script>
     <script src="./scripts/carousel-scripts.js" defer></script>
     <!-- Fonts google -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Titillium+Web:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
       rel="stylesheet"
-   >
+    />
     <!-- Fonts awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-   >
+    />
   </head>
   <body>
     <header>
@@ -48,7 +48,7 @@
               class="logo"
               src="./images/logo.svg"
               alt="logotipo CaLaMariona"
-           >
+            />
           </a>
         </div>
         <div class="hamburger">
@@ -59,13 +59,23 @@
       </div>
       <nav id="menu" class="header-menu-2">
         <ul>
-          <li>
-            <a
-              href="./index.html"
-              title="Enlace a la página principal de la cooperativa"
-              >Cooperativa</a
-            >
-            <i class="fa-solid fa-chevron-up"></i>
+          <li class="dropdown">
+            <span
+              ><a
+                href="./index.html"
+                title="Enlace a la página principal de la cooperativa"
+                >Cooperativa</a
+              >
+              <i class="fa-solid fa-chevron-up"></i
+            ></span>
+            <ul class="submenu">
+              <li><a href="#">Quienes somos</a></li>
+              <li><a href="#">Qué hacemos</a></li>
+              <li><a href="#">Cómo funciona</a></li>
+              <li><a href="#">Dónde estamos</a></li>
+              <li><a href="#">Beneficios</a></li>
+              <li><a href="./signup.html">Inscríbete</a></li>
+            </ul>
           </li>
           <li>
             <a
@@ -121,7 +131,7 @@
               src="./images/hero_img_ramon_xs.jpg"
               alt="Ramón Bilbao feliz con su cosecha"
               class="carousel-item active"
-           >
+            />
           </div>
           <div class="carousel-wrapper">
             <div class="carousel-slide-information">
@@ -143,7 +153,7 @@
               src="./images/hero_img_cucumbers_xs.jpg"
               alt="Los primeros calabacines de la temporada"
               class="carousel-item"
-           >
+            />
           </div>
         </div>
         <a
@@ -178,7 +188,7 @@
             <img
               src="./images/card_01.jpg"
               alt="Maria Antònia en su herbolistería"
-           >
+            />
             <div class="card-info">
               <h4>Maria Antònia Romeu Vilaspasa</h4>
               <p>"Gracias a CaLaMariona ahora tengo acceso a los mejores...</p>
@@ -189,7 +199,7 @@
             <img
               src="./images/card_02.jpg"
               alt="Pere en la carnicería del mercado de Cerdanyola"
-           >
+            />
             <div class="card-info">
               <h4>Pere Pons Fontdevila</h4>
               <p>"Cuando conocí CaLaMariona no esperaba que...</p>
@@ -200,7 +210,7 @@
             <img
               src="./images/card_03.jpg"
               alt="Oliver atendiendo a su huerto"
-           >
+            />
             <div class="card-info">
               <h4>Oliver Fernández Rodríguez</h4>
               <p>
@@ -295,8 +305,8 @@
           <h6>Información de contacto</h6>
           <address>
             <p>
-              Carrer de la font, 12<br>
-              Cerdanyola del Vallés<br>
+              Carrer de la font, 12<br />
+              Cerdanyola del Vallés<br />
               08080 Barcelona
             </p>
             <ul>
@@ -323,7 +333,7 @@
           </ul>
         </div>
       </div>
-      <img class="logo" src="./images/logo.svg" alt="logotipo CaLaMariona">
+      <img class="logo" src="./images/logo.svg" alt="logotipo CaLaMariona" />
       <div>
         <div class="footer_redes">
           <a href="#" title="Enlace a la red Twitter" target="_blank"
