fix: white redes on hero and carousel

--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
       </nav>
       <div class="redes">
         <a href="#" title="Enlace a la red Twitter" target="_blank"
-          ><i class="fa-brands fa-twitter green"></i
+          ><i class="fa-brands fa-twitter"></i
         ></a>
         <a href="#" title="Enlace a la red Facebook" target="_blank"
-          ><i class="fa-brands fa-facebook green"></i
+          ><i class="fa-brands fa-facebook"></i
         ></a>
         <a href="#" title="Enlace a la red Instagram" target="_blank"
-          ><i class="fa-brands fa-instagram green"></i
+          ><i class="fa-brands fa-instagram"></i
         ></a>
       </div>
     </header>
