--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
           <span class="carousel-control-icon" aria-hidden="true"
             ><i class="fa-solid fa-chevron-left"></i
           ></span>
+          <span class="carousel-control-text">anterior</span>
         </a>
         <a
           class="carousel-control next"
@@ -172,6 +173,7 @@
           role="button"
           data-slide="next"
         >
+          <span class="carousel-control-text">siguiente</span>
           <span class="carousel-control-icon" aria-hidden="true"
             ><i class="fa-solid fa-chevron-right"></i
           ></span>
@@ -224,8 +226,10 @@
             <span class="carousel-control-icon" aria-hidden="true"
               ><i class="fa-solid fa-chevron-left"></i
             ></span>
+            <span class="carousel-control-text">anterior</span>
           </a>
           <a class="" href="#" role="button">
+            <span class="carousel-control-text">siguiente</span>
             <span class="carousel-control-icon" aria-hidden="true"
               ><i class="fa-solid fa-chevron-right"></i
             ></span>
