fix: add aria-label to controls sliders

--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
           href="#carousel"
           role="button"
           data-slide="prev"
+          aria-label="previous"
         >
           <span class="carousel-control-icon" aria-hidden="true"
             ><i class="fa-solid fa-chevron-left"></i
@@ -172,6 +173,7 @@
           href="#carousel"
           role="button"
           data-slide="next"
+          aria-label="next"
         >
           <span class="carousel-control-text">siguiente</span>
           <span class="carousel-control-icon" aria-hidden="true"
@@ -222,13 +224,13 @@
             </div>
           </div>
 
-          <a class="" href="#" role="button">
+          <a class="" href="#" role="button" aria-label="previous">
             <span class="carousel-control-icon" aria-hidden="true"
               ><i class="fa-solid fa-chevron-left"></i
             ></span>
             <span class="carousel-control-text">anterior</span>
           </a>
-          <a class="" href="#" role="button">
+          <a class="" href="#" role="button" aria-label="next">
             <span class="carousel-control-text">siguiente</span>
             <span class="carousel-control-icon" aria-hidden="true"
               ><i class="fa-solid fa-chevron-right"></i
