fix: put correct heading level at footer titles

--- a/signup.html
+++ b/signup.html
@@ -214,11 +214,11 @@
     <footer>
       <div class="info">
         <div>
-          <h6>Información de contacto</h6>
+          <h2>Información de contacto</h2>
           <address>
             <p>
-              Carrer de la font, 12<br>
-              Cerdanyola del Vallés<br>
+              Carrer de la font, 12<br />
+              Cerdanyola del Vallés<br />
               08080 Barcelona
             </p>
             <ul>
@@ -234,7 +234,7 @@
           </address>
         </div>
         <div class="info-web">
-          <h6>Información web</h6>
+          <h2>Información web</h2>
           <ul>
             <li><a href="#">Aviso legal</a></li>
             <li><a href="#">Proyecto web</a></li>
@@ -245,7 +245,7 @@
           </ul>
         </div>
       </div>
-      <img class="logo" src="./images/logo.svg" alt="logotipo CaLaMariona">
+      <img class="logo" src="./images/logo.svg" alt="logotipo CaLaMariona" />
       <div>
         <div class="footer_redes">
           <a href="#" title="Enlace a la red Twitter" target="_blank"
