fix: add hidden h1 to index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
           </a>
         </div>
         <div class="hamburger">
-          <a href="#" onclick="showMenu(document.getElementById('menu'), 'd-block')"
+          <a
+            href="#"
+            onclick="showMenu(document.getElementById('menu'), 'd-block')"
             ><i class="fa-solid fa-bars"></i
           ></a>
         </div>
@@ -66,7 +68,10 @@
                 title="Enlace a la página principal de la cooperativa"
                 >Cooperativa</a
               >
-              <i class="fa-solid fa-chevron-up" onclick="showMenu(document.getElementById('submenu'), 'd-flex')"></i
+              <i
+                class="fa-solid fa-chevron-up"
+                onclick="showMenu(document.getElementById('submenu'), 'd-flex')"
+              ></i
             ></span>
             <ul id="submenu" class="submenu">
               <li><a href="#">Quienes somos</a></li>
@@ -112,6 +117,9 @@
       </div>
     </header>
     <main>
+      <section class="hidden-title" style="position: absolute; visibility: hidden;">
+        <h1>Página principal de CaLaMariona</h1>
+      </section>
       <section class="carousel">
         <div class="carousel-inner">
           <div class="carousel-wrapper">
