fix: delete visibility hidden

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       </div>
     </header>
     <main>
-      <section class="hidden-title" style="position: absolute; visibility: hidden;">
+      <section class="hidden-title" style="position: absolute;">
         <h1>Página principal de CaLaMariona</h1>
       </section>
       <section class="carousel">
