add aria-label and title on ctas for buy products

--- a/products.html
+++ b/products.html
@@ -196,7 +196,7 @@
               <img src="./images/products/judia_1000px.jpg" alt="Imagen de las judías de temporada">
             </div>
             <div class="product-action">
-              <div class="product-buy" role="button">
+              <div class="product-buy" role="button" aria-label="Agregar al carrito" title="Agregar al carrito">
                 <p><i class="fa-solid fa-cart-plus"></i></p>
               </div>
               <p>23,9€/Kg</p>
@@ -209,7 +209,7 @@
               <img src="./images/products/ajos_1000px.jpg" alt="Imagen de ajos de llançà">
             </div>
             <div class="product-action">
-              <div class="product-buy" role="button">
+              <div class="product-buy" role="button" aria-label="Agregar al carrito" title="Agregar al carrito">
                 <p><i class="fa-solid fa-cart-plus"></i></p>
               </div>
               <p>23,9€/Kg</p>
@@ -222,7 +222,7 @@
               <img src="./images/products/berenjena_1000px.jpg" alt="Imagen de la cosecha de berengenas">
             </div>
             <div class="product-action">
-              <div class="product-buy" role="button">
+              <div class="product-buy" role="button" aria-label="Agregar al carrito" title="Agregar al carrito">
                 <p><i class="fa-solid fa-cart-plus"></i></p>
               </div>
               <p>23,9€/Kg</p>
@@ -235,7 +235,7 @@
               <img src="./images/products/calabacines_1000px.jpg" alt="Imagen de grupo de calabacines">
             </div>
             <div class="product-action">
-              <div class="product-buy" role="button">
+              <div class="product-buy" role="button" aria-label="Agregar al carrito" title="Agregar al carrito">
                 <p><i class="fa-solid fa-cart-plus"></i></p>
               </div>
               <p>23,9€/Kg</p>
@@ -248,7 +248,7 @@
               <img src="./images/products/cebollas_1000px.jpg" alt="Imagen de cebollas de Figueres">
             </div>
             <div class="product-action">
-              <div class="product-buy" role="button">
+              <div class="product-buy" role="button" aria-label="Agregar al carrito" title="Agregar al carrito">
                 <p><i class="fa-solid fa-cart-plus"></i></p>
               </div>
               <p>23,9€/Kg</p>
@@ -261,7 +261,7 @@
               <img src="./images/products/tomates.jpg" alt="Imagen de la cosecha de tomates de la temporada">
             </div>
             <div class="product-action">
-              <div class="product-buy" role="button">
+              <div class="product-buy" role="button" aria-label="Agregar al carrito" title="Agregar al carrito">
                 <p><i class="fa-solid fa-cart-plus"></i></p>
               </div>
               <p>23,9€/Kg</p>
@@ -274,7 +274,7 @@
               <img src="./images/products/esparragos_1000px.jpg" alt="Imagen de un par de manojos de espárragos">
             </div>
             <div class="product-action">
-              <div class="product-buy" role="button">
+              <div class="product-buy" role="button" aria-label="Agregar al carrito" title="Agregar al carrito">
                 <p><i class="fa-solid fa-cart-plus"></i></p>
               </div>
               <p>23,9€/Kg</p>
@@ -287,7 +287,7 @@
               <img src="./images/products/col_1000px.jpg" alt="Imagen de la lechuga iceberg de esta temporada">
             </div>
             <div class="product-action">
-              <div class="product-buy" role="button">
+              <div class="product-buy" role="button" aria-label="Agregar al carrito" title="Agregar al carrito">
                 <p><i class="fa-solid fa-cart-plus"></i></p>
               </div>
               <p>23,9€/Kg</p>
@@ -300,7 +300,7 @@
               <img src="./images/products/patatas_1000px.jpg" alt="Imagen de la cosecha de patatas de Ramón Bilbao">
             </div>
             <div class="product-action">
-              <div class="product-buy" role="button">
+              <div class="product-buy" role="button" aria-label="Agregar al carrito" title="Agregar al carrito">
                 <p><i class="fa-solid fa-cart-plus"></i></p>
               </div>
               <p>23,9€/Kg</p>
