more aria-label and title on ctas for buy products

--- a/products.html
+++ b/products.html
@@ -170,7 +170,7 @@
               <img src="./images/products/acelgas_1000px.jpg" alt="Imagen de las acelgas de la temporada">
             </div>
             <div class="product-action">
-              <div class="product-buy" role="button">
+              <div class="product-buy" role="button" aria-label="Agregar al carrito" title="Agregar al carrito">
                 <p><i class="fa-solid fa-cart-plus"></i></p>
               </div>
               <p>3,66€/Kg</p>
@@ -183,7 +183,7 @@
               <img src="./images/products/pimientos_1000px.jpg" alt="Imagen de los pimientos de temporada">
             </div>
             <div class="product-action">
-              <div class="product-buy" role="button">
+              <div class="product-buy" role="button" aria-label="Agregar al carrito" title="Agregar al carrito">
                 <p><i class="fa-solid fa-cart-plus"></i></p>
               </div>
               <p>23,9€/Kg</p>
