add aria-label to search input element

--- a/products.html
+++ b/products.html
@@ -121,7 +121,7 @@
       <section class="products-container">
         <aside class="products-nav">
           <div class="search">
-            <input type="search">
+            <input type="search" aria-label="Buscar">
           </div>
           <div class="category">
             <h6>Categoría</h6>
